@@ -1,4 +1,4 @@
 SUBDIRS =
 bin_PROGRAMS = zabbix_sender
 zabbix_sender_SOURCES = zabbix_sender.c
-zabbix_sender_LDADD = ../libs/zbxcommon/libzbxcommon.a ../libs/zbxlog/libzbxlog.a ../libs/zbxsys/libzbxsys.a ../libs/zbxcrypto/libzbxcrypto.a ../libs/zbxconf/libzbxconf.a ../libs/zbxcomms/libzbxcomms.a
+zabbix_sender_LDADD = ../libs/zbxcommon/libzbxcommon.a ../libs/zbxlog/libzbxlog.a ../libs/zbxsys/libzbxsys.a ../libs/zbxcrypto/libzbxcrypto.a ../libs/zbxconf/libzbxconf.a ../libs/zbxcomms/libzbxcomms.a ../libs/zbxnet/libzbxnet.a
